--- a/SEChatPreprod.html
+++ b/SEChatPreprod.html
@@ -34,7 +34,7 @@
 <script type='text/javascript'>
     var initESW = function(gslbBaseURL) {
         embedded_svc.settings.displayHelpButton = true; //Or false
-        embedded_svc.settings.language = 'se'; //For example, enter 'en' or 'en-US'
+        embedded_svc.settings.language = 'sv'; //For example, enter 'en' or 'en-US'
 
         //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
         //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
