--- a/WEBUFormAttachement.html
+++ b/WEBUFormAttachement.html
@@ -44,7 +44,7 @@
 					console.log("status"+Status);
 					console.log("Subject"+Subject);
                    //xhttp.send("name="+name);
-                    xhttp.send("orgid="+orgid+"&retURL="+retURL+"&Status="+Status+"&name="+name+"&email="+email+"&recordType="+recordType+"&countrycode="+countrycode+"&Subject="+Subject);                    
+                    xhttp.send("orgid="+orgid+"&retURL="+retURL+"&Status="+Status+"&name="+name+"&email="+email+"&recordType="+recordType+"&countrycode="+countrycode+"&Subject="+Subject+"&file="+file);                    
                 });
             }
         </script>
