--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -20,7 +20,7 @@
 
     z-index: 1;
 
-    background-image: url("https://ecic2--uat.sandbox.my.site.com/resource/1751575252000/PolarBear");
+    background-image: url("https://ecic2--uat.sandbox.my.site.com/resource/1751575252000/PolarBear?");
 
     background-size: 100%;
 
