--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -20,7 +20,7 @@
 
     z-index: 1;
 
-    background-image: url("https://ecic2--uat.sandbox.my.site.com/resource/1751575252000/PolarBear?");
+   
 
     background-size: 100%;
 
@@ -58,7 +58,7 @@
         </head>
                <!---Jyoti Start-To Add Polar Bear -->
       <div id="imageblock">
-  <button class="button" onclick="document.getElementById('imageblock').style.display='none';">x</button>
+ // <button class="button" onclick="document.getElementById('imageblock').style.display='none';">x</button>
 </div>
 <!---Jyoti -End - To Add Polar Bear -->
 
