--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -28,11 +28,11 @@
   }
 </style>
 </head>
-<div id="imageblock">
+
+<body>
+<div id='imageblock'>
 <button class="button" onclick="document.getElementById('imageblock').style.display='none';">X</button>
 </div>	
-<body>
-
 <script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
