--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -31,7 +31,7 @@
 
 <body>
 <div id='imageblock'>
-<button class="button" onclick="document.getElementById('imageblock').style.display='none';">X</button>
+<button class='button' onclick="document.getElementById('imageblock').style.display='none';">X</button>
 </div>	
 <script type='text/javascript'>
 	function initEmbeddedMessaging() {
