--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -4,7 +4,35 @@
 <div id='imageblock'>
 <button class='button' onclick="document.getElementById('imageblock').style.display='none';">X</button>
 </div>
-
+<head>
+<style type="text/css">
+#imageblock{
+	opacity: 1;
+	position: fixed;
+	bottom: -22px;
+	right: 0px;
+	height: 150px;
+	width: 187px;
+	margin-right: 21px;
+	z-index: 1;
+	background-image: url("https://ecic2--uat.sandbox.my.site.com/resource/1751575252000/PolarBear");
+    background-size: 100%;
+	background-repeat: no-repeat;
+	}
+  #button{
+  background-color: #cccccc;
+  border: none;
+  color: #5a5a5a;
+  padding: 3px 6px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-left: 168px;
+  cursor: pointer;
+  }
+</style>
+</head>
 <body>	
 <script type='text/javascript'>
 function initEmbeddedMessaging(){
