--- a/V3- CSCChatWebteam.html
+++ b/V3- CSCChatWebteam.html
@@ -45,7 +45,7 @@
 // chat tool js
 // ===================================================================
 -->
-
+<body>
 <script type='text/javascript'>
     function initEmbeddedMessaging() {
         try {
