--- a/V3- CSCChatWebteam.html
+++ b/V3- CSCChatWebteam.html
@@ -2,6 +2,7 @@
    <div id='imageblock'>
       <button class='button' onclick="document.getElementById('imageblock').style.display='none';">X</button>
    </div>
+   <body>   
    <style type="text/css">
       #imageblock {
       opacity: 1;
@@ -29,7 +30,6 @@
       cursor: pointer;
       }
    </style>
-   <body>
       <script type='text/javascript'>
          function initEmbeddedMessaging(){
              try {
@@ -37,7 +37,6 @@
                   window.addEventListener("onEmbeddedMessagingReady", () => {
                      console.log("Received the onEmbeddedMessagingReady event…");
                  
-                     // Send data to Salesforce
                      embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"Country_Code" : "JP",
                          "Origin" : "Chat",
                          "Offline_Support" : "No"
@@ -56,7 +55,7 @@
              }
          };
       </script>
+      alert('test');
       <script type='text/javascript' src='https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
-      <!--↑chat-code-->
    </body>
 </html>
