--- a/V3- CSCChatWebteam.html
+++ b/V3- CSCChatWebteam.html
@@ -1,6 +1,6 @@
 <html>
-   <div id='imageblock'>
-      <button class='button' onclick="document.getElementById('imageblock').style.display='none';">X</button>
+   <div id="imageblock">
+      <button class="button" onclick="document.getElementById('imageblock').style.display='none';">X</button>
    </div>
    <body>   
    <style type="text/css">
@@ -30,8 +30,8 @@
       cursor: pointer;
       }
    </style>
-      <script type='text/javascript'>
-         function initEmbeddedMessaging(){
+      <script type="text/javascript">
+         function initEmbeddedMessaging() {
              try {
                  embeddedservice_bootstrap.settings.language = 'ja'; // For example, enter 'en' or 'en-US'
                   window.addEventListener("onEmbeddedMessagingReady", () => {
@@ -58,6 +58,6 @@
          };
       </script>
       alert('test3');
-     <script type='text/javascript' src='https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+     <script onload="initEmbeddedMessaging()" src="https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js" type="text/javascript"></script>
    </body>
 </html>
