--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -1,10 +1,10 @@
 <html>
-<div id='imageblock'>
+<div id="imageblock">
 <button class='button' onclick="document.getElementById('imageblock').style.display='none';">X</button>
 </div>
 <head>
 <style type="text/css">
-#imageblock{
+#imageblock {
 	opacity: 1;
 	position: fixed;
 	bottom: -22px;
@@ -17,7 +17,7 @@
     background-size: 100%;
 	background-repeat: no-repeat;
 	}
-  #button{
+  .button {
   background-color: #cccccc;
   border: none;
   color: #5a5a5a;
@@ -66,6 +66,6 @@
         }
     };
 </script>
-<script type='text/javascript' src='https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js' onload=initEmbeddedMessaging()'></script>
 </body>
 </html>
