--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -35,6 +35,7 @@
 <script type='text/javascript'>
     function initEmbeddedMessaging() {
         try {
+		alert ("test1");
             embeddedservice_bootstrap.settings.language = 'ja'; // For example, enter 'en' or 'en-US'
              //Jyoti-Start
              
@@ -66,6 +67,6 @@
         }
     };
 </script>
-<script type='text/javascript' src='https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js' onload=initEmbeddedMessaging()'></script>
+<script type="text/javascript" src='https://ecic2--uat.sandbox.my.site.com/ESWJPCSCMIAWChat1751525888187/assets/js/bootstrap.min.js' onload="initEmbeddedMessaging()"></script>
 </body>
 </html>
