--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -17,7 +17,7 @@
     background-size: 100%;
 	background-repeat: no-repeat;
 	}
-  .button {
+  #button {
   background-color: #cccccc;
   border: none;
   color: #5a5a5a;
