--- a/CSCMIAWTest.html
+++ b/CSCMIAWTest.html
@@ -1,5 +1,6 @@
 <html>
-<div id="imageblock">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
+<!--<div id="imageblock">
 <button class='button' onclick="document.getElementById('imageblock').style.display='none';">X</button>
 </div>
 <head>
@@ -30,7 +31,7 @@
   cursor: pointer;
   }
 </style>
-</head>
+</head>-->
 <body>	
 <script type='text/javascript'>
     function initEmbeddedMessaging() {
